// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MovieItem /> renders correctly first movie 1`] = `
<View
  style={
    Object {
      "borderBottomWidth": 1,
      "borderColor": "#ddd",
      "height": 60,
      "justifyContent": "center",
      "paddingLeft": 10,
    }
  }
>
  <Text
    style={
      Object {
        "fontSize": 18,
      }
    }
  >
    Interstellar
     - 
    2014
  </Text>
  <Text
    style={
      Object {
        "fontSize": 12,
      }
    }
  >
    Christopher
     
    Nolan
  </Text>
</View>
`;

exports[`<MovieItem /> renders correctly second movie 1`] = `
<View
  style={
    Object {
      "borderBottomWidth": 1,
      "borderColor": "#ddd",
      "height": 60,
      "justifyContent": "center",
      "paddingLeft": 10,
    }
  }
>
  <Text
    style={
      Object {
        "fontSize": 18,
      }
    }
  >
    Mad Max: Fury Road
     - 
    2015
  </Text>
  <Text
    style={
      Object {
        "fontSize": 12,
      }
    }
  >
    George
     
    Miller
  </Text>
</View>
`;
